# zmaxion

./: .gitignore  Cargo.toml  LICENCE  README.md  lints.toml  rust-toolchain.toml
benches/: Cargo.toml
benches/zmaxion_topic/: topic_bench.rs
crates/demo/: Cargo.toml
crates/demo/src/: bi.rs  lib.rs  push.rs
crates/dummy/: Cargo.toml
crates/dummy/src/: lib.rs
crates/ergnomics/: Cargo.toml
crates/ergnomics/src/: helpers.rs  lib.rs
crates/generates/: Cargo.toml
crates/generates/src/: lib.rs
crates/vec_list/: Cargo.toml
crates/vec_list/src/: lib.rs
crates/zmaxion_app/: Cargo.toml
crates/zmaxion_app/src/: app.rs  lib.rs  plugin.rs  topic_plugin.rs
crates/zmaxion_app/src/app/: builder.rs
crates/zmaxion_core/: Cargo.toml
crates/zmaxion_core/src/: components.rs  definitions.rs  error.rs  ext.rs  lib.rs  macros.rs  messages.rs  models.rs  pipe.rs  pipeline.rs  resources.rs  state.rs  sync.rs  topic.rs  traits.rs  v2.rs
crates/zmaxion_core/src/pipe/: factory.rs  param.rs
crates/zmaxion_core/src/topic/: mem.rs
crates/zmaxion_core/src/topic/mem/: reader.rs  writer.rs
crates/zmaxion_derive/: Cargo.toml
crates/zmaxion_derive/src/: lib.rs  proc_process.rs
crates/zmaxion_dylib/: Cargo.toml
crates/zmaxion_dylib/src/: lib.rs
crates/zmaxion_ecs/: Cargo.toml
crates/zmaxion_ecs/src/: change_detection.rs  component.rs  data_types.rs  lib.rs  parallel_executor.rs  universe.rs  world.rs
crates/zmaxion_ecs/src/parallel_executor/: commands.rs  system.rs
crates/zmaxion_ecs/src/query/: iter.rs  state.rs
crates/zmaxion_ecs/src/storage/: table.rs
crates/zmaxion_ecs/src/world/: entity_ref.rs  spawn_batch.rs  world_cell.rs
crates/zmaxion_flow/: Cargo.toml
crates/zmaxion_flow/src/: default.rs  flow.rs  flower.rs  lib.rs
crates/zmaxion_internal/: Cargo.toml
crates/zmaxion_internal/src/: lib.rs
crates/zmaxion_macro_utils/: Cargo.toml
crates/zmaxion_macro_utils/src/: lib.rs
crates/zmaxion_param/: Cargo.toml
crates/zmaxion_param/src/: async_topic.rs  errors.rs  lib.rs  params_impl.rs
crates/zmaxion_pipe/: Cargo.toml
crates/zmaxion_pipe/src/: lib.rs  p2.rs
crates/zmaxion_pipe_graph/: Cargo.toml
crates/zmaxion_pipe_graph/src/: lib.rs
crates/zmaxion_plugins/: Cargo.toml
crates/zmaxion_plugins/src/: error.rs  lib.rs  pipe.rs  pipeline.rs  state.rs  topic.rs
crates/zmaxion_rt/: Cargo.toml
crates/zmaxion_rt/src/: lib.rs  rt_tokio.rs
crates/zmaxion_topic/: Cargo.toml
crates/zmaxion_topic/src/: api.rs  async_topic.rs  data_frame_topic.rs  df_topic.rs  dyn_topic.rs  lib.rs  models.rs  system_df_topic.rs  system_topic.rs  topic_impl.rs  topic_v2.rs
crates/zmaxion_topics/: Cargo.toml  base.toml  build.rs
crates/zmaxion_topics/src/: lib.rs
crates/zmaxion_utils/: Cargo.toml
crates/zmaxion_utils/src/: convert.rs  ext.rs  lib.rs  macros.rs  pool.rs  sync.rs
examples/: pipe_showcase.rs
src/: lib.rs
tests/: main.rs
tests/expand/: process.rs
tests/it/: Cargo.toml
