[package]
name = "benches"
version = "0.1.0"
edition = "2021"
description = "Benchmarks for Zmaxion"
publish = false
license = "MIT OR Apache-2.0"

[dev-dependencies]
zmaxion_utils = { path = "../crates/zmaxion_utils" }
zmaxion_param = { path = "../crates/zmaxion_param" }
zmaxion_topic = { path = "../crates/zmaxion_topic" }
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8.5"
arc-swap = "1.5.0"

[[bench]]
name = "topic_bench"
path = "zmaxion_topic/topic_bench.rs"
harness = false

