[package]
name = "benches"
version = "0.1.0"
edition = "2021"
description = "Benchmarks for Zmaxion"
publish = false
license = "MIT OR Apache-2.0"

[dev-dependencies]
#zmaxion_core = { path = "../crates/zmaxion_core" }
#zmaxion_utils = { path = "../crates/zmaxion_utils" }
#zmaxion_param = { path = "../crates/zmaxion_param" }
#zmaxion_topic = { path = "../crates/zmaxion_topic" }
fixedbitset = "0.4.2"
criterion = { version = "0.3", features = ["html_reports"] }
rand = { version = "0.8.5", features = ["small_rng"] }
parking_lot = "0.12.1"
arc-swap = "1.5.0"
spin = "0.9.2"
phf = { version = "0.11.0", features = ["macros"] }
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.24"


[[bench]]
name = "topic_bench"
path = "zmaxion_topic/topic_bench.rs"
harness = false

