[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmaxion_utils = { path = "../zmaxion_utils", version = "0.1.0" }
bevy_ecs = { version = "0.7.0", default-features = false }
slab = "0.4.6"
futures-lite = "1.12.0"

[dev-dependencies]
bevy = { version = "0.7.0", default-features = false }
tokio = { version = "1.19.0", features = ["full"] }
reqwest = "0.11.10"
pin-project-lite = "0.2.9"
