[package]
name = "zmaxion_core"
version = "0.1.0"
edition = "2021"
description = "Provides core functionality for Zmaxion"
repository = "https://github.com/Stock84-dev/zmaxion"
license = "MIT OR Apache-2.0"
keywords = ["zmaxion"]

[dependencies]
zmaxion_derive = { path = "../zmaxion_derive", version = "0.1.0" }
zmaxion_utils = { path = "../zmaxion_utils", version = "0.1.0" }
zmaxion_rt = { path = "../zmaxion_rt", version = "0.1.0" }
ergnomics = { path = "../ergnomics", version = "0.1.0" }
bevy_utils = { version = "0.7.0", default-features = false }
bevy_ecs = { version = "0.7.0", default-features = false }
bevy_derive = { version = "0.7.0", default-features = false }
petgraph = "0.6.2"
atomic = "0.5.1"
rand = "0.8.5"
nested = "0.1.1"
rtrb = "0.2.2"
pin-project-lite = "0.2.9"
concurrent-queue = "1.2.4"
multiqueue = "0.3.2"
legion = "0.4.0"
fixedbitset = "0.4.2"
async-watch = "0.3.1"
async-channel = "1.7.1"
thiserror = "1.0.24"
anyhow = "1.0.57"
async-trait = "0.1.51"
cache-padded = "1.2.0"
spin = "0.9.2"
parking_lot = { version = "0.12.1" }
serde = "1.0.130"
smallvec = "1.8.0"
priomutex = "0.3.1"
serde_yaml = "0.8.20"
paste = "1.0.5"
futures-util = "0.3.17"
bitflags = "1.3.2"
derive-new = "0.5.9"
futures = "0.3.24"
enum-ordinalize = "3.1.11"
enumflags2 = "0.7.5"
