[package]
name = "zmaxion_macro_utils"
version = "0.1.0"
edition = "2021"
description = "A collection of macro utils for Zmaxion"
homepage = "https://bevyengine.org"
repository = "https://github.com/Stock84-dev/zmaxion"
license = "MIT OR Apache-2.0"
keywords = ["zmaxion"]

[dependencies]
toml = "0.5.8"
syn = "1.0"
quote = "1.0"
