[package]
name = "zmaxion_param"
version = "0.1.0"
edition = "2021"
description = "Provides core functionality for Zmaxion's pipe paramaters"
repository = "https://github.com/Stock84-dev/zmaxion"
license = "MIT OR Apache-2.0"
keywords = ["zmaxion", "bevy"]
categories = ["data-structures"]

[features]

[dependencies]
zmaxion_utils = { path = "../zmaxion_utils", version = "0.1.0" }
zmaxion_core = { path = "../zmaxion_core", version = "0.1.0" }
zmaxion_rt = { path = "../zmaxion_rt", version = "0.1.0" }
ergnomics = { path = "../ergnomics" }
bevy_ecs = { version = "0.7.0", default-features = false }
serde = "1.0.137"
async-trait = "0.1.51"
serde_yaml = "0.8.20"
thiserror = "1.0.24"
paste = "1.0.5"
futures-util = "0.3.17"
cache-padded = "1.2.0"
