[package]
name = "zmaxion_pipe_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
zmaxion_utils = { path = "../zmaxion_utils", version = "0.1.0" }
zmaxion_core = { path = "../zmaxion_core", version = "0.1.0" }
zmaxion_topic = { path = "../zmaxion_topic", version = "0.1.0" }
zmaxion_topics = { path = "../zmaxion_topics", version = "0.1.0" }
bevy_utils = { version = "0.7.0", default-features = false }
futures-util = { version = "0.3.21", default-features = false }
