[package]
name = "zmaxion_plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmaxion_app = { path = "../zmaxion_app", version = "0.1.0" }
zmaxion_core = { path = "../zmaxion_core", version = "0.1.0" }
zmaxion_rt = { path = "../zmaxion_rt", version = "0.1.0" }
bevy = { version = "0.6.0", default-features = false }
