[package]
name = "zmaxion_rt"
version = "0.1.0"
edition = "2021"
description = "Async runtime abstraction for Zmaxion"
repository = "https://github.com/Stock84-dev/zmaxion"
license = "MIT OR Apache-2.0"
keywords = ["runtime", "abstraction", "zmaxion"]

[features]
rt_tokio = ["tokio"]
default = ["rt_tokio"]

[dependencies]
bevy_ecs = { version = "0.7.0", default-features = false }
pin-project = "1.0.10"
futures-lite = "1.12.0"
tokio = { version = "1.11.0", features = ["rt", "sync", "time", "rt-multi-thread"], optional = true }
lazy_static = "1.4.0"
async-mutex = "1.4.0"
