[package]
name = "zmaxion_utils"
version = "0.1.0"
edition = "2021"
description = "A collection of utils for Zmaxion"
repository = "https://github.com/Stock84-dev/zmaxion"
license = "MIT OR Apache-2.0"
keywords = ["zmaxion"]


[dependencies]
priomutex = "0.3.1"
anyhow = "1.0.57"
spin = "0.9.2"
parking_lot = { version = "0.11.2" }
serde_yaml = "0.8.20"
tracing = "0.1.34"
smallvec = "1.8.0"
